...
        <View
            android:id="@+id/centre_line"
            android:layout_width="@dimen/px_1"
            android:layout_height="match_parent"
            android:background="@color/color_d1d5da"/>
        <TextView
            android:id="@+id/okBtn"
            android:layout_width="0px"
            android:layout_height="@dimen/dp_40"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Common_OK"
            android:textColor="@color/color_007aff"
...
